fixed some of the spacing issues with text+image in translator page

--- a/src/app/components/translator-page/translator-page.component.css
+++ b/src/app/components/translator-page/translator-page.component.css
@@ -93,9 +93,10 @@
 
     .media .profile-image {
         min-height: 100%;
-        height: 380px;
+        height: 390px;
         width: auto;
     }
+    
     
 }
 
